--- a/index.html
+++ b/index.html
@@ -1,77 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Recipe page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Recipe page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="stylesheet.css" />
+  </head>
 
-  Simple Omelette Recipe
+  <body>
+    <div class="container">
+      <h1>Simple Omelette Recipe</h1>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      <p>
+        An easy and quick dish, perfect for any meal. This classic omelette
+        combines beaten eggs cooked to perfection, optionally filled with your
+        choice of cheese, vegetables, or meats.
+      </p>
 
-  Preparation time
+      <div class="prep-time">
+        <h3>Preparation time</h3>
+        <ul>
+          <li><b>Total:</b> Approximately 10 minutes</li>
+          <li><b>Preparation:</b> 5 minutes</li>
+          <li><b>Cooking:</b> 5 minutes</li>
+        </ul>
+      </div>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>
+          Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        </li>
+      </ul>
+      <hr />
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+      <h2>Instructions</h2>
+      <ol>
+        <li>
+          <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt
+          and pepper until they are well mixed. You can add a tablespoon of
+          water or milk for a fluffier texture.
+        </li>
+        <li>
+          <b>Heat the pan:</b> Place a non-stick frying pan over medium heat and
+          add butter or oil.
+        </li>
+        <li>
+          <b>Cook the omelette:</b> Once the butter is melted and bubbling, pour
+          in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+        </li>
+        <li>
+          <b>Add fillings (optional):</b> When the eggs begin to set at the
+          edges but are still slightly runny in the middle, sprinkle your chosen
+          fillings over one half of the omelette.
+        </li>
+        <li>
+          <b>Fold and serve:</b> As the omelette continues to cook, carefully
+          lift one edge and fold it over the fillings. Let it cook for another
+          minute, then slide it onto a plate.
+        </li>
+        <li>
+          <b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.
+        </li>
+      </ol>
 
-  Ingredients
+      <h2>Nutrition</h2>
+      <p>
+        The table below shows nutritional values per serving without the
+        additional fillings.
+      </p>
+      <div class="row">
+        <div class="col">Calories</div>
+        <div class="col value"><b>277kcal</b></div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col">Carbs</div>
+        <div class="col value"><b>0g</b></div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col">Protein</div>
+        <div class="col value"><b>20g</b></div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col">Fat</div>
+        <div class="col value"><b>22g</b></div>
+      </div>
+    </div>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/CatRod/recipe-page-main-FrontEnd-Mentor"
+        >CatRod</a
+      >.
+    </div>
+  </body>
 </html>
