--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
   <body>
     <div class="container">
-      <h1>Simple Omelette Recipe</h1>
+      <img
+        src="assets/images/image-omelette.jpeg"
+        alt="image of an omelette"
+        width="660"
+      />
+      <h1><b>Simple Omelette Recipe</b></h1>
 
       <p>
         An easy and quick dish, perfect for any meal. This classic omelette
@@ -33,56 +38,79 @@
       </p>
 
       <div class="prep-time">
-        <h3>Preparation time</h3>
+        <h3><b>Preparation time</b></h3>
         <ul>
-          <li><b>Total:</b> Approximately 10 minutes</li>
-          <li><b>Preparation:</b> 5 minutes</li>
-          <li><b>Cooking:</b> 5 minutes</li>
+          <li>
+            <span><b>Total:</b> Approximately 10 minutes</span>
+          </li>
+          <li>
+            <span><b>Preparation:</b> 5 minutes</span>
+          </li>
+          <li>
+            <span><b>Cooking:</b> 5 minutes</span>
+          </li>
         </ul>
       </div>
-      <h2>Ingredients</h2>
+      <h2><b>Ingredients</b></h2>
       <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
+        <li><span>2-3 large eggs</span></li>
+        <li><span>Salt, to taste</span></li>
+        <li><span>Pepper, to taste</span></li>
+        <li><span>1 tablespoon of butter or oil</span></li>
         <li>
-          Optional fillings: cheese, diced vegetables, cooked meats, herbs
+          <span>
+            Optional fillings: cheese, diced vegetables, cooked meats,
+            herbs</span
+          >
         </li>
       </ul>
       <hr />
 
-      <h2>Instructions</h2>
+      <h2><b>Instructions</b></h2>
       <ol>
         <li>
-          <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt
-          and pepper until they are well mixed. You can add a tablespoon of
-          water or milk for a fluffier texture.
+          <span>
+            <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt
+            and pepper until they are well mixed. You can add a tablespoon of
+            water or milk for a fluffier texture.</span
+          >
         </li>
         <li>
-          <b>Heat the pan:</b> Place a non-stick frying pan over medium heat and
-          add butter or oil.
+          <span>
+            <b>Heat the pan:</b> Place a non-stick frying pan over medium heat
+            and add butter or oil.</span
+          >
         </li>
         <li>
-          <b>Cook the omelette:</b> Once the butter is melted and bubbling, pour
-          in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+          <span>
+            <b>Cook the omelette:</b> Once the butter is melted and bubbling,
+            pour in the eggs. Tilt the pan to ensure the eggs evenly coat the
+            surface.</span
+          >
         </li>
         <li>
-          <b>Add fillings (optional):</b> When the eggs begin to set at the
-          edges but are still slightly runny in the middle, sprinkle your chosen
-          fillings over one half of the omelette.
+          <span>
+            <b>Add fillings (optional):</b> When the eggs begin to set at the
+            edges but are still slightly runny in the middle, sprinkle your
+            chosen fillings over one half of the omelette.</span
+          >
         </li>
         <li>
-          <b>Fold and serve:</b> As the omelette continues to cook, carefully
-          lift one edge and fold it over the fillings. Let it cook for another
-          minute, then slide it onto a plate.
+          <span>
+            <b>Fold and serve:</b> As the omelette continues to cook, carefully
+            lift one edge and fold it over the fillings. Let it cook for another
+            minute, then slide it onto a plate.
+          </span>
         </li>
         <li>
-          <b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.
+          <span>
+            <b>Enjoy:</b> Serve hot, with additional salt and pepper if
+            needed.</span
+          >
         </li>
       </ol>
 
-      <h2>Nutrition</h2>
+      <h2><b>Nutrition</b></h2>
       <p>
         The table below shows nutritional values per serving without the
         additional fillings.
